Added boolean field to not render a link to the show page

--- a/_config.yml
+++ b/_config.yml
@@ -37,5 +37,6 @@ defaults:
     hashtag: 
     special_arrangments: 
     rating: 
-    is kidzu: 
+    is kidzu:
+    is no_details:
 permalink: pretty
